manifests/apps/code/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: code
  namespace: apps
  labels:
    app: code
spec:
  serviceName: code
  replicas: 1
  selector:
    matchLabels:
      app: code
  template:
    metadata:
      labels:
        app: code
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: code
          image: ghcr.io/nelsondane/kasm-vscode-root:latest@sha256:b0867ca9dc9696e2e93ecda237ac61b9c3eeb3891764dfaf216a1ec9532033ec
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: code-config
              mountPath: /home/kasm-user
          ports:
            - containerPort: 6901
  volumeClaimTemplates:
    - metadata:
        name: code-config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 16Gi
        storageClassName: longhorn
